# agent_framework_webapp

./: .gitignore  PgPasswordRotation.md  README.md  pyproject.toml  run.ps1  test.json
af_fastapi/: .dockerignore  .env  .env.sample  CYPHER_QUERY_GENERATION_AGENT_GENERIC.md  CYPHER_QUERY_VALIDATION_AGENT_GENERIC.md  Dockerfile  ORCHESTRATION_MANAGER_INSTRUCTIONS.md  TASK_LEDGER_FULL_PROMPT.md  af_fastapi.py  customer_graph_faqs.txt  graph_implementation copy.py  graph_implementation.py  graph_implementation_generic_ontology.py  handoff_implementation.py  magentic_implementation.py  magentic_implementation_search.py  mcp_client.py  meetings_graph_faqs.txt  meetings_graph_v2_faqs.txt  pg_age_helper.py  pyproject.toml  single_agent_implementation.py  sse_bus.py  test.http
af_fastapi/agent_instructions/: CYPHER_QUERY_GENERATION_AGENT_GENERIC_OSS_v1.md  CYPHER_QUERY_GENERATION_AGENT_GENERIC_v1.md  CYPHER_QUERY_VALIDATION_AGENT_GENERIC_OSS_v1.md  CYPHER_QUERY_VALIDATION_AGENT_GENERIC_v1.md  FINAL_ANSWER_PROMPT_v1.md  ORCHESTRATION_MANAGER_INSTRUCTIONS_v1.md  TASK_LEDGER_FULL_PROMPT_v1.md
af_fastapi/agent_instructions/backup_v1_pre_rewrite/: CYPHER_QUERY_VALIDATION_AGENT_GENERIC_v1.md  ORCHESTRATION_MANAGER_INSTRUCTIONS_v1.md  TASK_LEDGER_FULL_PROMPT_v1.md
af_fastapi/agent_instructions/backup_v2_pre_rewrite/: CYPHER_QUERY_GENERATION_AGENT_GENERIC_v1.md  CYPHER_QUERY_VALIDATION_AGENT_GENERIC_v1.md  ORCHESTRATION_MANAGER_INSTRUCTIONS_v1.md  TASK_LEDGER_FULL_PROMPT_v1.md
af_fastapi/agent_instructions/backup_v3_pre_rewrite/: CYPHER_QUERY_GENERATION_AGENT_GENERIC_v1.md  CYPHER_QUERY_VALIDATION_AGENT_GENERIC_v1.md  FINAL_ANSWER_PROMPT_v1.md  ORCHESTRATION_MANAGER_INSTRUCTIONS_v1.md  TASK_LEDGER_FULL_PROMPT_v1.md
af_fastapi/ai_backup/: CYPHER_QUERY_GENERATION_AGENT_GENERIC_backup.md  CYPHER_QUERY_VALIDATION_AGENT_GENERIC_backup.md  ORCHESTRATION_MANAGER_INSTRUCTIONS_backup.md  TASK_LEDGER_FULL_PROMPT_backup.md
azd_deploy/: README.md  azure.yaml
docker_setup/: .env.docker.sample  deploy-docker-desktop.ps1  docker-compose.yml
docs/: generate_slide3.py  generate_slide_data_security.py  mcp_slides.pptx  mcp_slides_updated.pptx  slide3_streaming_use_cases.pptx  slides_mcp_server_streamablehttp.md  ~$mcp_slides.pptx
eval/: eval notes.md  eval_meetings.py  full100_llmdecomp_hybrid.jsonl  full100_llmdecomp_hybrid_meetings_graph_v2_FW-GPT-OSS-120B_eval.csv  full100_llmdecomp_hybrid_meetings_graph_v2_gpt-4.1_eval.csv  full100_llmdecomp_hybrid_meetings_graph_v2_gpt-4.1_eval.xlsx  full100_llmdecomp_hybrid_meetings_graph_v2_gpt-4.1_eval_with_notes.csv
mcp_server/: .dockerignore  .env.sample  Dockerfile  af_alta_search_mcp_server.py  af_weather_mcp_server.py  age_mcp_server.py  agentic_retrieval.ipynb  agentic_retrieval_create_knowledge_source.py  agentic_retrieval_mcp_server.py  agentic_retrieval_run_pipeline.py  atlassian_mcp_server.py  atlassian_mcp_server_test.py  atlassian_mcp_server_working.py  evaluation_data.jsonl  mcp_fastapi_server.py  pg_age_helper.py  pyproject.toml  requirements.txt  search_helper.py  user_defined_types.py
postgresql_age/: .env.sample  age_query_generator.ipynb  requirements.txt  (+5 more)
(+111 files in other folders)
